Bug 69975 - SLIDESHOW: Customized slideshow broken; shows all slides (see comment #1 )
Summary: SLIDESHOW: Customized slideshow broken; shows all slides (see comment #1 )
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: Other Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.2.0 target:4.1.4
Keywords: regression
: 70174 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-09-30 17:24 UTC by royerjy
Modified: 2021-07-17 18:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description royerjy 2013-09-30 17:24:32 UTC
Problem description: 

Les diaporamas personnalisés ne fonctionnent plus. 

Steps to reproduce:
1. .... Ouvrir une présentation avec des diaporamas personnalisés
2. .... Cocher "Utiliser le diaporama personnalisé"
3. .... Cliquer sur "Début", ce qui semble avoir remplacé le bouton "Lancer" ou bien utiliser F5 ou Maj+F5.

Current behavior:
En parcourant les diapos, toutes défilent

Expected behavior:
Seules les diapos du Diaporama personnalisé devraient défiler.

              
Operating System: Ubuntu
Version: 4.1.2.2 rc
Comment 1 Arnaud Versini 2013-09-30 18:00:41 UTC
Problem description: 

Customized-slide-show show all slides

Steps to reproduce:
1. Open a presentation with customized slide show
2. Check in Custom Slide show dialog "Use custom slide show"
3. Press "Start", witch seems to replace button "Launch"  or use F5 ou Maj+F5.

Current behavior:
By running through slides, all are showed

Expected behavior:
Only slides in the Customized slide show should be scrolled 

Confirmed also on the same platform

English please :-)
Comment 2 Jean-Baptiste Faure 2013-10-05 19:30:45 UTC
*** Bug 70174 has been marked as a duplicate of this bug. ***
Comment 3 Cor Nouws 2013-10-05 22:46:23 UTC
OK in 406rc1, broken in 4.1.0.beta1
Comment 4 Caolán McNamara 2013-10-22 09:53:36 UTC
regression from baffab9a4ffca9a4940a3310937d6e858e66cc1f due to bug #58505
Comment 5 Commit Notification 2013-10-22 12:03:39 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=438f5cf4229dafe2100e36d818b05535091054d7

Resolves: fdo#69975 honour custom show settings



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-11-13 15:23:01 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=393c38129284fe3b9b9fc0b927f8cd128f016a86&h=libreoffice-4-1

Resolves: fdo#69975 honour custom show settings


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Danny Becker 2021-07-17 07:34:47 UTC Comment hidden (spam)