Resolves: fdo#69975 honour custom show settings

if a custom show is set, then don't override it with
current/first page, just accept it

Change-Id: Icd04711028b3e11a576df6cd325ddb0db8974111
(cherry picked from commit 438f5cf4229dafe2100e36d818b05535091054d7)

merge all three ShowSlideShow impls together

Change-Id: If82f6313b258a79d59fbe34ab7846db5f9f45f76
(cherry picked from commit 368e94ce33bb4de1d2c0348082a349331a17f332)

bStartWithActualSlide is always false

(cherry picked from commit a1b0b68c0f1fe2467cddf021e09123085d043de2)

Conflicts:
	sd/source/ui/slideshow/slideshowimpl.cxx
	sd/source/ui/slideshow/slideshowimpl.hxx

Change-Id: Icf61858730e2576439fdc7bdd1c8a911f2b34bd7